# pyhqiv

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: ci.yml  release.yml
docs/: CONSTANTS_AUDIT.md  HQIV_CMB_Pipeline.md  HQIV_Integrated_Space_Model.md  binding_energy_walkthrough.md  conf.py  index.rst
examples/: cmb_mollview_planck.ipynb  cmb_mollview_planck.py  deuteron_validation.py  folding_shim_example.py  hqiv_space_model_full.py  neutron_star_toy.py  protein_example.py  relax_with_hqiv.py  reproduce_paper.py  run_from_T_Pl_to_now_demo.py  silicon_bandgap_hqiv.py  simple_two_atom.py  thermo_answer_any_question.py  thermo_argon_critical.py  thermo_ase_phase_stability.py  thermo_metallic_hydrogen_phase_diagram.py  thermo_silicon_melting.py
scripts/: binding_energy_chart.py  update_citation_cff.py
src/pyhqiv/: __init__.py  algebra.py  ase_interface.py  atom.py  bulk_seed.py  cmb_pipeline.py  constants.py  cosmology.py  cosmology_full.py  crystal.py  defects.py  energy_field.py  entanglement.py  export.py  fields.py  fluid.py  horizon_network.py  hqiv_scalings.py  lattice.py  molecular.py  nuclear.py  orbit.py  perturbations.py  phase.py  polarization.py  protocols.py  redshift.py  response.py  semiconductors.py  solar_core.py  subatomic.py  system.py  thermo.py  universal_system.py  utils.py  waveguide.py
src/pyhqiv/cosmology/: __init__.py  background.py  cmb_map.py  hqiv_cmb.py  universe_evolver.py
tests/: __init__.py  test_ase_calculator.py  test_cmb_pipeline.py  test_cosmology_full.py  test_crystal.py  test_defects.py  test_export.py  test_fluid.py  test_hqiv_cmb.py  test_lattice.py  test_molecular.py  test_nuclear.py  test_paper_numbers.py  test_perturbations.py  test_phase.py  test_physical_values.py  test_polarization.py  test_response.py  test_semiconductors.py  test_system.py  test_thermo.py  test_universal.py  test_waveguide.py
